--- a/index.html
+++ b/index.html
@@ -141,10 +141,22 @@
                     
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Angular CRUD</h5><i
-                                class="card-subtitle mb-2 text-muted">Personal Project</i>
+                            <h5 class="card-title">CRUD</h5><i
+                                class="card-subtitle mb-2 text-muted">Personal Project - Angular</i>
                             <p class="card-text">Web-based Application for Creating, Reading, Updating and Deleting 
                                  data through Http requests.</p><a href="https://yogesh-narigapalli.github.io/Angular-CRUD/"
+                                target="_blank" class="btn btn-primary mt-auto"><i class="fa fa-code"></i></a>
+                        </div>
+                    </div>
+                </li>
+                <li class="list-item">
+                    
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Pixel India</h5><i
+                                class="card-subtitle mb-2 text-muted">Personal Project - Angular</i>
+                            <p class="card-text">Locates selected district on the Indian map. Used Google map API and MapQuest 
+                                API for GeoCoding the location.</p><a href="https://yogesh-narigapalli.github.io/Angular-Pixel-India/"
                                 target="_blank" class="btn btn-primary mt-auto"><i class="fa fa-code"></i></a>
                         </div>
                     </div>
