added media app project

--- a/index.html
+++ b/index.html
@@ -156,7 +156,20 @@
                             <h5 class="card-title">Pixel India</h5><i
                                 class="card-subtitle mb-2 text-muted">Personal Project - Angular</i>
                             <p class="card-text">Locates selected district on the Indian map. Used Google map API and MapQuest 
-                                API for GeoCoding the location.</p><a href="https://yogesh-narigapalli.github.io/Angular-Pixel-India/"
+                                API for GeoCoding the location.</p><a href="https://yogesh-narigapalli.github.io/Angular---Pixel-India/"
+                                target="_blank" class="btn btn-primary mt-auto"><i class="fa fa-code"></i></a>
+                        </div>
+                    </div>
+                </li>
+                <li class="list-item">
+                    
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Media App</h5><i
+                                class="card-subtitle mb-2 text-muted">Personal Project - Angular</i>
+                            <p class="card-text"> Static website for a Media company with private content only 
+                                for the logged users.
+                                 </p><a href="https://yogesh-narigapalli.github.io/Media-App/"
                                 target="_blank" class="btn btn-primary mt-auto"><i class="fa fa-code"></i></a>
                         </div>
                     </div>
