--- a/index.html
+++ b/index.html
@@ -174,6 +174,18 @@
                         </div>
                     </div>
                 </li>
+                <li class="list-item">
+                    
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Splash Images</h5><i
+                                class="card-subtitle mb-2 text-muted">Personal Project - Vanilla JS</i>
+                            <p class="card-text"> Dashboard for images with options of shuffling and deleting the selected ones.
+                                 </p><a href="https://splashimages.netlify.app/"
+                                target="_blank" class="btn btn-primary mt-auto"><i class="fa fa-code"></i></a>
+                        </div>
+                    </div>
+                </li>
             </ul>
         </div>
     </section>
