--- a/index.html
+++ b/index.html
@@ -202,13 +202,39 @@
         <div class="container py-2 my-5 border-bottom">
             <div class="row">
                 <div class="col-12 col-md-9">
-                    <h4><strong>Bizense Software Technologies</strong></h4>
+                    <h4><strong>University of North Carolina at Charlotte</strong></h4>
                 </div>
-                <div class="col-12 col-md-3"><span class="align-middle">2018 - Present</span></div>
+                <div class="col-12 col-md-3"><span class="align-middle">Jan 2020 - May 2021</span></div>
             </div>
             <div class="row">
                 <div class="col-12">
-                    <p>Product Engineer - Front End Developer</p>
+                    <p>MS - Computer Science</p>
+                </div>
+            </div>
+        </div>
+        <div class="container py-2 my-5 border-bottom">
+            <div class="row">
+                <div class="col-12 col-md-9">
+                    <h4><strong>Artivatic DataLabs Pvt Ltd</strong></h4>
+                </div>
+                <div class="col-12 col-md-3"><span class="align-middle"> June 2020 - Jan 2021</span></div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <p>Front End Developer</p>
+                </div>
+            </div>
+        </div>
+        <div class="container py-2 my-5 border-bottom">
+            <div class="row">
+                <div class="col-12 col-md-9">
+                    <h4><strong>Bizense Software Technologies</strong></h4>
+                </div>
+                <div class="col-12 col-md-3"><span class="align-middle">Aug 2018 - Apr 2020</span></div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <p>Software Engineer - Front End Developer</p>
                 </div>
             </div>
         </div>
