--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <div class="col-12 col-md-9">
                     <h4><strong>Amrita Vishwa Vidyapeetham</strong></h4>
                 </div>
-                <div class="col-12 col-md-3"><span class="align-middle">2014 - 2018</span></div>
+                <div class="col-12 col-md-3"><span class="align-middle">July 2014 - May 2018</span></div>
             </div>
             <div class="row">
                 <div class="col-12">
