--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h1 class="name"><strong>Yogesh Narigapalli</strong></h1>
             </div>
             <div class="row py-2 justify-content-center">
-                <h4 class="text-white-50">Front End Developer | Full Stack Enthusiast</h4>
+                <h4 class="text-white-50">Experienced Front End Developer</h4>
             </div>
             <div class="row py-2 justify-content-center"><a role="button" class="btn btn-resume"
                     href="https://drive.google.com/file/d/1uNSmN_MwRqkoPtcqMYMbbZ72RUWh9Eg-/view?usp=sharing" target="_blank"
