--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <div class="container py-2 my-5 border-bottom">
             <div class="row">
                 <div class="col-12 col-md-9">
-                    <h4><strong>Artivatic DataLabs Pvt Ltd</strong></h4>
+                    <h4><strong>Artivatic Datalabs Pvt Ltd</strong></h4>
                 </div>
                 <div class="col-12 col-md-3"><span class="align-middle"> June 2020 - Jan 2021</span></div>
             </div>
