--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="row py-2">
                 <div class="col-12 col-md-6 text-center">
                     <h2>Hello, I am <strong class="text-success">Yogesh</strong>!</h2>
-                    <h4 class="py-1">Front End Developer | Full Stack Enthusiast</h4>
+                    <h4 class="py-1">Experienced Front End Developer</h4>
                     <ul class="social-icons list-unstyled">
                         <li><a href="https://www.facebook.com/yogeshnarigapalli" target="_blank"><i
                                     class="fa fa-facebook"></i></a></li>
